--- a/templates/base.html
+++ b/templates/base.html
@@ -105,6 +105,13 @@
                             <i class="fas fa-list me-1"></i>Certificados
                         </a>
                     </li>
+                    {% if current_user.username == 'admin' %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('admin') }}">
+                            <i class="fas fa-users-cog me-1"></i>Gerenciar Usuários
+                        </a>
+                    </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
@@ -141,4 +148,5 @@
     <!-- Custom Scripts -->
     {% block scripts %}{% endblock %}
 </body>
+</html> 
 </html> 
