--- a/templates/certificados.html
+++ b/templates/certificados.html
@@ -16,6 +16,9 @@
                 <a href="{{ url_for('exportar_certificados') }}" class="btn btn-primary">
                     <i class="fas fa-file-excel me-2"></i>Exportar Excel
                 </a>
+                <a href="{{ url_for('xml_upload') }}" class="btn btn-success">
+                    <i class="fas fa-file-upload me-2"></i>Enviar XML
+                </a>
             </div>
         </div>
     </div>
